// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`options as array of strings renders radio group 1`] = `
<div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_apple"
      name="name"
      type="radio"
      value="Apple"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_apple"
      id="id_option_apple_label"
    >
      Apple
    </label>
  </div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_banana"
      name="name"
      type="radio"
      value="Banana"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_banana"
      id="id_option_banana_label"
    >
      Banana
    </label>
  </div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_orange"
      name="name"
      type="radio"
      value="Orange"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_orange"
      id="id_option_orange_label"
    >
      Orange
    </label>
  </div>
</div>
`;

exports[`options options as array of numbers renders radio group 1`] = `
<div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_0"
      name="name"
      type="radio"
      value="0"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_0"
      id="id_option_0_label"
    >
      0
    </label>
  </div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_1"
      name="name"
      type="radio"
      value="1"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_1"
      id="id_option_1_label"
    >
      1
    </label>
  </div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_2"
      name="name"
      type="radio"
      value="2"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_2"
      id="id_option_2_label"
    >
      2
    </label>
  </div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_3"
      name="name"
      type="radio"
      value="3"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_3"
      id="id_option_3_label"
    >
      3
    </label>
  </div>
</div>
`;

exports[`options options as array of objects group renders grouped options 1`] = `
<div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_apple"
      name="name"
      type="radio"
      value="Apple"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_apple"
      id="id_option_apple_label"
    >
      Apple
    </label>
  </div>
  <div
    class="react-combo-boxes-radio-group"
  >
    <div
      class="react-combo-boxes-radio-group__label"
      id="id_group_citrus"
    >
      Citrus
    </div>
    <div
      class="react-combo-boxes-radio"
    >
      <input
        aria-labelledby="id_group_citrus id_option_orange_label"
        class="react-combo-boxes-radio__input"
        id="id_option_orange"
        name="name"
        type="radio"
        value="Orange"
      />
      <label
        class="react-combo-boxes-radio__label"
        for="id_option_orange"
        id="id_option_orange_label"
      >
        Orange
      </label>
    </div>
    <div
      class="react-combo-boxes-radio"
    >
      <input
        aria-labelledby="id_group_citrus id_option_lemon_label"
        class="react-combo-boxes-radio__input"
        id="id_option_lemon"
        name="name"
        type="radio"
        value="Lemon"
      />
      <label
        class="react-combo-boxes-radio__label"
        for="id_option_lemon"
        id="id_option_lemon_label"
      >
        Lemon
      </label>
    </div>
  </div>
  <div
    class="react-combo-boxes-radio-group"
  >
    <div
      class="react-combo-boxes-radio-group__label"
      id="id_group_berry"
    >
      Berry
    </div>
    <div
      class="react-combo-boxes-radio"
    >
      <input
        aria-labelledby="id_group_berry id_option_raspberry_label"
        class="react-combo-boxes-radio__input"
        id="id_option_raspberry"
        name="name"
        type="radio"
        value="Raspberry"
      />
      <label
        class="react-combo-boxes-radio__label"
        for="id_option_raspberry"
        id="id_option_raspberry_label"
      >
        Raspberry
      </label>
    </div>
    <div
      class="react-combo-boxes-radio"
    >
      <input
        aria-labelledby="id_group_berry id_option_strawberry_label"
        class="react-combo-boxes-radio__input"
        id="id_option_strawberry"
        name="name"
        type="radio"
        value="Strawberry"
      />
      <label
        class="react-combo-boxes-radio__label"
        for="id_option_strawberry"
        id="id_option_strawberry_label"
      >
        Strawberry
      </label>
    </div>
  </div>
</div>
`;

exports[`options options as array of objects label renders radio group 1`] = `
<div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_apple"
      name="name"
      type="radio"
      value="Apple"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_apple"
      id="id_option_apple_label"
    >
      Apple
    </label>
  </div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_banana"
      name="name"
      type="radio"
      value="Banana"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_banana"
      id="id_option_banana_label"
    >
      Banana
    </label>
  </div>
  <div
    class="react-combo-boxes-radio"
  >
    <input
      class="react-combo-boxes-radio__input"
      id="id_option_orange"
      name="name"
      type="radio"
      value="Orange"
    />
    <label
      class="react-combo-boxes-radio__label"
      for="id_option_orange"
      id="id_option_orange_label"
    >
      Orange
    </label>
  </div>
</div>
`;
